fix: Remove separator on mobile

--- a/src/src/screens/calibration/Intro.css
+++ b/src/src/screens/calibration/Intro.css
@@ -1,1 +1,5 @@
-null
+@media (max-width: 500px) {
+  section.intro span.secondary.separator {
+    display: none;
+  }
+}
